# Novum

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  deviceCode.cu  deviceCode.cuh  fastIntegrators.cu  fastIntegrators.cuh  imageUtil.cu  imageUtil.cuh  integratorUtilities.cuh  main.cu  objects.cuh  reflectors.cuh  rng.cu  rng.cuh  util.cuh  wavefrontHelper.cuh
assets/environment/: black.exr~
assets/environment/.mayaSwatches/: kloppenheim_06_puresky_1k.exr_hcm.swatch
assets/scenedata/lightbulb/: base.mtl  box.mtl  filament.mtl  filamentholder.mtl  glass.mtl  glassmiddle.mtl
assets/textures/: leafautumn.bmp~  leaftransmission.kra  leaftransmission.kra~  texture2.bmp.kra  texture3.bmp.kra  texture4.bmp.kra
assets/textures/.mayaSwatches/: texture.bmp_hcm.swatch  texture2.bmp_hcm.swatch  texture4.bmp_hcm.swatch
assets/vdb/industrial/industrial_chimney_smoke/industrial_chimney_smoke_VDB/: industrial_chimney_smoke_0000.vdb  industrial_chimney_smoke_0001.vdb  industrial_chimney_smoke_0002.vdb  industrial_chimney_smoke_0003.vdb  industrial_chimney_smoke_0004.vdb  industrial_chimney_smoke_0005.vdb  industrial_chimney_smoke_0006.vdb  industrial_chimney_smoke_0007.vdb  industrial_chimney_smoke_0008.vdb  industrial_chimney_smoke_0009.vdb  industrial_chimney_smoke_0010.vdb  industrial_chimney_smoke_0011.vdb  industrial_chimney_smoke_0012.vdb  industrial_chimney_smoke_0013.vdb  industrial_chimney_smoke_0014.vdb  industrial_chimney_smoke_0015.vdb  industrial_chimney_smoke_0016.vdb  industrial_chimney_smoke_0017.vdb  industrial_chimney_smoke_0018.vdb  industrial_chimney_smoke_0019.vdb  industrial_chimney_smoke_0020.vdb  industrial_chimney_smoke_0021.vdb  industrial_chimney_smoke_0022.vdb  industrial_chimney_smoke_0023.vdb  industrial_chimney_smoke_0024.vdb  industrial_chimney_smoke_0025.vdb  industrial_chimney_smoke_0026.vdb  industrial_chimney_smoke_0027.vdb  industrial_chimney_smoke_0028.vdb  industrial_chimney_smoke_0029.vdb  industrial_chimney_smoke_0030.vdb  industrial_chimney_smoke_0031.vdb  industrial_chimney_smoke_0032.vdb  industrial_chimney_smoke_0033.vdb  industrial_chimney_smoke_0034.vdb  industrial_chimney_smoke_0035.vdb  industrial_chimney_smoke_0036.vdb  industrial_chimney_smoke_0037.vdb  industrial_chimney_smoke_0038.vdb  industrial_chimney_smoke_0039.vdb  (+210 more)
assets/vdb/nvdb/: explosion.nvdb  smoke2.nvdb
assets/vdb/nvdb/industrial/: smoke_0000.nvdb  smoke_0001.nvdb  smoke_0002.nvdb  smoke_0003.nvdb  smoke_0004.nvdb  smoke_0005.nvdb  smoke_0006.nvdb  smoke_0007.nvdb  smoke_0008.nvdb  smoke_0009.nvdb  smoke_0010.nvdb  smoke_0011.nvdb  smoke_0012.nvdb  smoke_0013.nvdb  smoke_0014.nvdb  smoke_0015.nvdb  smoke_0016.nvdb  smoke_0017.nvdb  smoke_0018.nvdb  smoke_0019.nvdb  smoke_0020.nvdb  smoke_0021.nvdb  smoke_0022.nvdb  smoke_0023.nvdb  smoke_0024.nvdb  smoke_0025.nvdb  smoke_0026.nvdb  smoke_0027.nvdb  smoke_0028.nvdb  smoke_0029.nvdb  smoke_0030.nvdb  smoke_0031.nvdb  smoke_0032.nvdb  smoke_0033.nvdb  smoke_0034.nvdb  smoke_0035.nvdb  smoke_0036.nvdb  smoke_0037.nvdb  smoke_0038.nvdb  smoke_0039.nvdb  (+210 more)
configs/: config.rendertron  config2.rendertron  dragon.rendertron  lightbulb.rendertron  lightbulb2.rendertron  lightbulbinterreflect.rendertron  volumeTest.rendertron  watersim.rendertron  windowsil.rendertron
include/: animation.cuh  deviceCode.cuh  environment.cuh  fastIntegrators.cuh  helpers.cuh  imageUtil.cuh  integratorUtilities.cuh  objects.cuh  realTime.cuh  realTimeUtils.cuh  reflectors.cuh  rng.cuh  sampling.cuh  sceneContexts.cuh  softwareBVH.cuh  todo.txt  util.cuh  volumeRendering.cuh  volumeUntils.cuh  volumeUtils.cuh  wavefrontHelper.cuh
optixBranch/: CMakeLists.txt  README.md  hostSetup.cuh  main.cu  optixSetup.cuh  optixStructs.cuh  optixUtils.cuh  renderer.cu  restirPTenhancedShaders.cu  restirPTenhancedShaders.cuh  restirPTenhanced_helpers.cuh  restirPTenhanced_host.cuh  restirPTenhanced_kernels.cu  restirPTenhanced_kernels.cuh  restirPTenhanced_shiftHelpers.cuh  restirPTenhanced_spatialReuseTextures.cuh  restirPTobjects.cuh  settings.cuh
src/: deviceCode.cu  fastIntegrators.cu  imageUtil.cu  main.cu  realTime.cu  restirplanning.txt  rng.cu  tinyexr_impl.cpp  volumeRendering.cu
tools/: batchconvert.ps1
